--- a/FE/package.json
+++ b/FE/package.json
@@ -34,6 +34,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
@@ -42,7 +43,6 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.63.0",
-    "shadcn-dropzone": "^0.2.1",
     "sonner": "^2.0.7",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
