--- a/.github/workflows/go-backend-ci-cd.yml
+++ b/.github/workflows/go-backend-ci-cd.yml
@@ -26,6 +26,9 @@ jobs:
           go-version: "1.22"
           cache-dependency-path: server/go.sum
 
+      - name: Install Dependencies
+        run: go mod download
+
       - name: Run tests
         run: go test -v ./...
 
