--- a/FE/Dockerfile
+++ b/FE/Dockerfile
@@ -1,4 +1,4 @@
-# Stage 1: Build a production-ready application
+# Stage 1: Build the application
 FROM node:20-alpine AS builder
 WORKDIR /app
 
@@ -6,19 +6,17 @@ COPY package*.json ./
 RUN npm ci
 
 COPY . .
-
 RUN npm run build
 
-# Stage 2: Create the final, optimized image
-FROM node:20-alpine
+# Stage 2: Create the final, minimal and secure image
+FROM gcr.io/distroless/nodejs20-debian12 AS runner
 WORKDIR /app
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package.json .
 
-# RUN npm ci --only=production
+ENV NODE_ENV=production
+
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/.next/standalone ./
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+CMD ["server.js"]
