feat(server): api for uploading video and AI logic for processing video

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL=postgresql://username:password@host:port/database_name
+SUPABASE_URL=postgresql://username:password@host:port/database_name
 
 # JWT Configuration
 JWT_SECRET="your-super-secret-jwt-key-change-me"
