--- a/FE/package.json
+++ b/FE/package.json
@@ -44,7 +44,7 @@
     "event-source-polyfill": "^1.0.31",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
-    "next": "^15.2.3",
+    "next": "15.5.9",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
